--- a/presentations/0/index.html
+++ b/presentations/0/index.html
@@ -5,24 +5,220 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learing ReactJS - Introduction</title>
+    <title>Learing React - Introduction</title>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
+    <link rel="stylesheet" href="../shared/helpers.css">
 </head>
 
 <body>
     <div class="reveal">
         <div class="slides">
             <section>
+                <h1>
+                    <u>React</u>
+                </h1>
+                <h2>
+                    Short Learing Course for Beginners - L0
+                </h2>
+            </section>
+
+            <section>
+                <h1>About me</h1>
+                <ul>
+                    <li>Vitalii Ruban</li>
+                    <li class="fragment fade-up">Head of Front-End department in <a target="_blank"
+                            href="https://www.itera.com/">Itera</a>
+                    </li>
+                    <li class="fragment fade-up">Member of the program committee <a target="_blank"
+                            rel="noopener noreferrer" href="https://jsfest.com">JsFest Ukraine
+                        </a>
+                    </li>
+                    <li class="fragment fade-up">Love #webperf and #websec</li>
+                </ul>
+            </section>
+
+            <section>
                 <section>
-                    <h1>What is React.JS</h1>
+                    <h1>
+                        What is React?
+                    </h1>
                 </section>
+
                 <section>
-                    <p>
+                    <h2>
+                        Simply saying - React is a JavaScript library that:
+                    </h2>
+
+                    <ul>
+                        <li class="fragment fade-up">
+                            Transforms your data into the markup
+                        </li>
+                        <li class="fragment fade-up">
+                            Redraw the markup when the data changed
+                        </li>
+                    </ul>
+                </section>
+
+                <section>
+                    <div>Data</div>
+                    <div class="fragment fade-up" data-fragment-index="1">⬇️</div>
+                    <div class="fragment fade-up" data-fragment-index="1">React</div>
+                    <div class="fragment fade-up" data-fragment-index="2">⬇️</div>
+                    <div class="fragment fade-up" data-fragment-index="2">Fancy Web Site</div>
+                </section>
+
+                <section>
+                    <pre>
+                        <code>
+ const data = {name: 'Vitalii'};
+ const App = ({name}) => <h2 className="green">Hello - {name}</h2>
+                        </code>
+                    </pre>
+
+                    <div class="fragment fade-up" data-fragment-index="1">⬇️</div>
+                    <h2 class="fragment fade-up " data-fragment-index="1">
+                        <span class="fragment highlight-green" data-fragment-index="1">Hello - Vitalii</span>
+                    </h2>
+                </section>
+
+                <section>
+                    <h2>More formal</h2>
+
+                    <p class="left">
                         React (also known as React.js or ReactJS) is a free and open-source front-end JavaScript
-                        library for building user interfaces based on UI components (C) wikipedia</p>
+                        library for building user interfaces based on UI components. React can be used as a base in the
+                        development of single-page, mobile, or server-rendered applications with frameworks like
+                        Next.js. (C) <a target="_blank" rel="noopener noreferrer"
+                            href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">Wiki</a>
+                    </p>
                 </section>
+
+                <section>
+                    <h2>Summary</h2>
+                    <p>React - open-source, JavaScript library that transforms your data into the markup and track the
+                        changes
+                    </p>
+                </section>
+
+            </section>
+
+            <section>
+                <section>
+                    <h1>React - advantages and disadvantages</h1>
+                </section>
+
+                <section>
+                    <h2>
+                        Advantages
+                    </h2>
+
+                    <ul>
+                        <li class="fragment fade-up">Declarative</li>
+                        <li class="fragment fade-up">Track changes automatically</li>
+                        <li class="fragment fade-up">Not a framework</li>
+                        <li class="fragment fade-up">Rich Ecosystem</li>
+                        <li class="fragment fade-up">Support client-side, server side rendering, mobile development</li>
+                        <li class="fragment fade-up">Fast</li>
+                    </ul>
+                </section>
+
+
+                <section>
+                    <h2>
+                        Disadvantages
+                    </h2>
+
+                    <ul>
+                        <li class="fragment fade-up">JSX</li>
+                        <li class="fragment fade-up">Own way to track changes</li>
+                        <li class="fragment fade-up">Not a framework*</li>
+                        <li class="fragment fade-up">Tends to put logic inside the View</li>
+                    </ul>
+                </section>
+
+            </section>
+
+            <section>
+
+                <section>
+                    <h1>Why to learn React nowadays</h1>
+                </section>
+
+                <section>
+                    <h2>It's popular</h2>
+                    <img src="./img/react-ang-vue-downloads-020422.png" alt="react is the most popular ui framework">
+                    <p class="left">Means: more chances to find a job</p>
+                </section>
+
+                <section>
+                    <h2>Mature</h2>
+                    <p class="left">Means: very low amount of bugs, good stability and support</p>
+                </section>
+
+                <section>
+                    <h2>Has rich ecosystem</h2>
+                    <ul>
+                        <li>Frameworks: - <a target="_blank" rel="noopener noreferrer"
+                                href="https://nextjs.org/">Next.JS</a>,
+                            <a target="_blank" rel="noopener noreferrer" href="https://nestjs.com/">Nest.JS</a>
+                        </li>
+
+                        <li>
+                            UI libraries - <a target="_blank" rel="noopener noreferrer" href="https://mui.com/">Material
+                                UI</a>,
+                            <a target="_blank" rel="noopener noreferrer" href="https://react-bootstrap.github.io/">React
+                                Bootstrap</a>,
+                            <a target="_blank" rel="noopener noreferrer"
+                                href="https://ant.design/docs/react/introduce">Ant Design of React</a>
+                        </li>
+
+                        <li>
+                            State Management - <a target="_blank" rel="noopener noreferrer"
+                                href="https://redux.js.org/">Redux</a>,
+                            <a target="_blank" rel="noopener noreferrer"
+                                href="https://mobx.js.org/react-integration.html">MobX</a>,
+                            <a target="_blank" rel="noopener noreferrer" href="https://recoiljs.org/">Recoil</a>
+                        </li>
+
+                        <li>
+                            Tooling -
+                            <a target="_blank" rel="noopener noreferrer" href="https://storybook.js.org/">Storybook</a>,
+                            <a target="_blank" rel="noopener noreferrer" href="https://create-react-app.dev/">Create
+                                React App</a>,
+                            <a
+                                href="https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en">React
+                                Developer Tools</a>
+                        </li>
+                    </ul>
+
+                    <p class="left">Means: Efficient development</p>
+                </section>
+            </section>
+
+            <section>
+                <h1>Useful links</h1>
+
+                <ul>
+                    <li>
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://reactjs.org/docs/getting-started.html">Documentation - MUST READ</a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/dan_abramov">"Father" of
+                            the React
+                        </a>
+
+                    </li>
+                    <li>
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://blog.devgenius.io/react-costs-companies-a-lot-of-money-6bfa3e5cc6f4">
+                            Why React is a bad idea
+                        </a>
+                    </li>
+                </ul>
             </section>
         </div>
     </div>
