Fixed spelling Updated readme

--- a/presentations/1/index.html
+++ b/presentations/1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learing React - Introduction</title>
+    <title>Learning React - Introduction</title>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
@@ -20,7 +20,7 @@
                     <u>React</u>
                 </h1>
                 <h2>
-                    Short Learing Course for Beginners - L1
+                    Short Learning Course for Beginners - L1
                 </h2>
             </section>
 
