Updated first slide

--- a/presentations/1/index.html
+++ b/presentations/1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning React - new project with create-react-app</title>
+    <title>React For Beginners by Itera - new project with create-react-app</title>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
@@ -21,12 +21,12 @@
     <div class="reveal">
         <div class="slides">
             <section>
-                <h1>
-                    <u>React</u>
-                </h1>
                 <h2>
-                    Short Learning Course for Beginners - L1
+                    <u>React For Beginners by Itera</u>
                 </h2>
+                <h4>
+                    L0 - Introduction    
+                </h4>
             </section>
 
             <section>
