Fixed naming for the 2nd workshop

--- a/presentations/1/index.html
+++ b/presentations/1/index.html
@@ -25,14 +25,14 @@
                     <u>React For Beginners by Itera</u>
                 </h2>
                 <h4>
-                    L0 - Introduction    
+                    L1 - Starting new project with create-react-app    
                 </h4>
             </section>
 
             <section>
                 <section>
                     <h1>
-                        Install
+                        Prerequisite
                     </h1>
 
                     <ul>
@@ -60,7 +60,7 @@
 
             <section>
                 <section>
-                    <h2>Starting new React project from scratch - easy way using create-react-app</h2>
+                    <h2>Starting new React project from scratch using create-react-app</h2>
                 </section>
 
                 <section>
