--- a/presentations/3/index.html
+++ b/presentations/3/index.html
@@ -2,25 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - introduction</title>
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
-    <link rel="stylesheet" href="../shared/helpers.css">
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
+    <link rel="stylesheet" href="../shared/helpers.css" />
 </head>
 
 <body>
     <div class="reveal">
         <div class="slides">
             <section>
-                <h1>
-                    <u>React For Beginners by Itera</u>
-                </h1>
+                <h1>L3 - Building your own component</h1>
                 <h4>
-                    L3 - Building your own component
+                    <u> React For Beginners by Itera </u>
                 </h4>
             </section>
 
@@ -28,12 +26,25 @@
                 <h2>Program</h2>
 
                 <ul>
-                    <li class="fragment fade-up">Create <i>class based</i> <i>dumb</i> component - MessageBlock</li>
-                    <li class="fragment fade-up">Turn it to the functional component</li>
-                    <li class="fragment fade-up">Create <i>smart</i> <i>class-based</i> component - button with a loader
-                        inside</li>
-                    <li class="fragment fade-up">Rework previous component to the functional</li>
-                    <li class="fragment fade-up">Combine it all together</li>
+                    <li class="fragment fade-up">
+                        Create <i>class-based</i>, <i>dumb</i> component - MessageBlock
+                    </li>
+                    <li class="fragment fade-up">
+                        Turn it to the functional component
+                    </li>
+                    <li class="fragment fade-up">
+                        Create <i>smart</i>, <i>class-based</i> component - button with a
+                        counter inside
+                    </li>
+                    <li class="fragment fade-up">
+                        Rework previous component to the functional
+                    </li>
+
+                    <li class="fragment fade-up">
+                        What and when to use
+                    </li>
+
+                    <li class="fragment fade-up">Best practices</li>
                 </ul>
             </section>
 
@@ -44,10 +55,17 @@
 
                 <section>
                     <ul>
-                        <li>Component - unit of code that encapsulate single, logical functionality</li>
+                        <li>
+                            Component - unit of code that encapsulate single, logical
+                            functionality
+                        </li>
                         <li class="fragment fade-up">Component can be dumb or smart</li>
-                        <li class="fragment fade-up">Component accepts props and returns JSX</li>
-                        <li class="fragment fade-up">Component can be build as a class or function</li>
+                        <li class="fragment fade-up">
+                            Component accepts props and returns JSX
+                        </li>
+                        <li class="fragment fade-up">
+                            Component can be build as a class or function
+                        </li>
                     </ul>
                 </section>
             </section>
@@ -58,59 +76,277 @@
                 </section>
 
                 <section>
-                    <ul>
-                        <li>Create a class named MeesageBlock</li>
-                        <li class="fragment fade-up">Extend PureComponent</li>
-                        <li class="fragment fade-up">Create method render inside the class</li>
-                        <li class="fragment fade-up">Return from the render method some JSX</li>
-                    </ul>
+                    <h4>Create the type for the props</h4>
+                    <pre>
+                        <code>
+    type MessageBlockProps = { message: string };
+                        </code>
+                    </pre>
                 </section>
 
                 <section>
-                    <pre><code data-line-numbers>import { PureComponent } from "react";
+                    <h4>Create a class named MessageBlock</h4>
+                    <pre>
+                    <code>
+    class MessageBlock extends PureComponent&lt;MessageBlockProps&gt; {}
+                    </code>
+                </pre>
+                </section>
 
-type MessageBlockProps = { message: string };
-
-class MessageBlock extends PureComponent&lt;MessageBlockProps&gt; {
-    render() {
-    const { message } = this.props;
-        return &lt;div className="ma-message"&gt;{message}&lt;/div&gt;;
+                <section>
+                    <h4>Create method render inside the class</h4>
+                    <pre><code>
+    class MessageBlock extends PureComponent&lt;MessageBlockProps&gt; {
+        render(){}
     }
-}
-    </code></pre>
+                    </code></pre>
+                </section>
+
+                <section>
+                    <h4>Return from the render method some JSX</h4>
+
+                    <pre>
+                        <code>
+    class MessageBlock extends PureComponent&lt;MessageBlockProps&gt; {
+        render() {
+        const { message } = this.props;
+            return &lt;div className="ma-message"&gt;{message}&lt;/div&gt;;
+        }
+    }
+                        </code>
+                    </pre>
+                </section>
+            </section>
+            <section>
+
+                <section>
+                    <h2>Message block - functional</h2>
+                </section>
+
+                <section>
+                    <h4>Create the type for the props 😊</h4>
+                    <pre>
+                        <code>
+    type MessageBlockProps = { message: string };
+                        </code>
+                    </pre>
+                </section>
+
+                <section>
+                    <h4>Define a function with correct type</h4>
+                    <pre><code>
+                        
+const MessageBlock: FC&lt;MessageBlockProps&gt; = ({ message }) =&gt; (
+);
+                    </code></pre>
+                </section>
+
+                <section>
+                    <h4>Return from the function some JSX 😊</h4>
+
+                    <pre>
+                        <code>
+    class MessageBlock extends PureComponent&lt;MessageBlockProps&gt; {
+        render() {
+        const { message } = this.props;
+            return &lt;div className="ma-message"&gt;{message}&lt;/div&gt;;
+        }
+    }
+                        </code>
+                    </pre>
+                </section>
+
+                <section>
+                    <h4>Enjoy! 😊</h4>
                 </section>
             </section>
 
             <section>
                 <section>
-                    <h2>Message block - functional</h2>
-                </section>
-
-
-                <section>
-                    <ul class="left">
-                        <li>Create a function that returns JSX</li>
-                        <li>Enjoy! 😊</li>
-                    </ul>
+                    <h2>Class-based button with counter</h2>
                 </section>
 
                 <section>
-                    <pre><code data-line-numbers>
-import { FC } from "react";
+                    <h4>Define type for </h4>
+                    <pre><code>
+    type BtnProps = {
+    };
+                    </code></pre>
+                </section>
 
-type MessageBlockProps = { message: string };
-
-const MessageBlock: FC&lt;MessageBlockProps&gt; = ({ message }) =&gt; (
-    &lt;div className="ma-message"&gt;{message}&lt;/div&gt;
-);
+                <section>
+                    <h4>Write the new class BtnWithCounter</h4>
+                    <pre><code data-line-numbers="">
+    class BtnWithCounter extends PureComponent&lt;BtnProps&gt; {
+    }
 
                     </code></pre>
                 </section>
 
                 <section>
-                    <h4>Functional components are great for the dumb type of component</h4>
+                    <h4>Create new object named state. Put counter equal to 0 inside</h4>
+                    <pre><code data-line-numbers="">
+    class BtnWithCounter extends PureComponent&lt;BtnProps&gt; {
+        state = { counter: 0 };
+    }
+                    </code></pre>
                 </section>
 
+
+                <section>
+                    <h4>Write a method that will handle click</h4>
+                    <pre><code data-line-numbers>
+    handleClick = () =&gt; {
+        const { counter: oldValue } = this.state;
+        const counter = oldValue + 1;
+        this.setState({ counter });
+        this.props.onAfterChange(counter);
+    };
+                    </code></pre>
+                </section>
+
+                <section>
+                    <h4 class="">Write render method that will return btn and counter</h4>
+                    <pre><code>
+    render() {
+        const { counter } = this.state;
+        return (
+            &lt;button type="button" onClick={this.handleClick}&gt;
+            Clicked {counter} times
+            &lt;/button&gt;
+        );
+    }
+                    </code></pre>
+                </section>
+
+                <section>
+                    <h4>How does magic work</h4>
+
+                    <div class="fragment fade-up" data-fragment-index="0">State = {counter:0}</div>
+                    <div class="fragment fade-up" data-fragment-index="1">⬇️</div>
+                    <div class="fragment fade-up" data-fragment-index="1">Render() = 0</div>
+                    <div class="fragment fade-up" data-fragment-index="2">⬇️</div>
+                    <div class="fragment fade-up" data-fragment-index="2">OnClick</div>
+                    <div class="fragment fade-up" data-fragment-index="3">⬇️</div>
+                    <div class="fragment fade-up" data-fragment-index="3">SetState({counter: counter+1})</div>
+                    <div class="fragment fade-up" data-fragment-index="4">⬇️</div>
+                    <div class="fragment fade-up" data-fragment-index="4">Render() = 1</div>
+                </section>
+
+            </section>
+
+            <section>
+                <section>
+                    <h2>Functional button with counter</h2>
+                </section>
+
+                <section>
+                    <h4>Define type</h4>
+                    <pre><code data-line-numbers>
+    type BtnProps = {
+        onAfterChange: (v: number) =&gt; void;
+    };
+                    </code></pre>
+                </section>
+
+                <section>
+                    <h4>Create a function</h4>
+                    <pre><code>
+    const BtnWithCounter: FC&lt;BtnProps&gt; = ({ onAfterChange }) =&gt; {
+        return &lt;&gt;&lt;/&gt;
+    }
+                    </code></pre>
+                </section>
+
+                <section>
+                    <h4>Setup state</h4>
+                    <pre><code>
+    const [counter, setCounter] = useState(0); // setup state
+    const BtnWithCounter: FC&lt;BtnProps&gt; = ({ onAfterChange }) =&gt; {
+        return &lt;&gt;&lt;/&gt;
+    }    
+</code></pre>
+                </section>
+
+                <section>
+                    <h4>Define handler for click</h4>
+                    <pre><code>
+const handleClick = () =&gt; {                // define handler
+    const newValue = counter + 1;             // implement logic
+    setCounter(newValue);                     // update state 
+    onAfterChange(newValue);                  // invoke callback
+};
+                        </code></pre>
+                </section>
+
+                <section>
+                    <h4>Return JSX</h4>
+
+                    <pre><code>
+return (
+    &lt;button type="button" onClick={handleClick}&gt;
+        Clicked {counter} times
+    &lt;/button&gt;
+);
+                        </code></pre>
+                </section>
+
+            </section>
+
+            <section>
+                <h2>What and when to use</h2>
+
+                <ul>
+                    <li class="fragment fade-up">Functional components are great as "dumb" components or small statefull
+                        components </li>
+                    <li class="fragment fade-up">Class-based components are great for the component with complex logic
+                    </li>
+                    <li class="fragment fade-up">PureComponent by default also great for performance reasons</li>
+                </ul>
+            </section>
+            <section>
+
+                <section>
+                    <h2>
+                        Best Practices
+                    </h2>
+                </section>
+
+                <section>
+                    <h4>
+                        Law of Demeter
+                    </h4>
+
+                    <ul>
+                        <li>Pass to component as less as possible</li>
+                        <li>Return from component as less as possible</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h4>
+                        Single responsibility
+                    </h4>
+                    <p> In ideal world - the are should be a single reason to change the component</p>
+                </section>
+
+                <section>
+                    <h4>Open-Closed principle</h4>
+
+                    <p>Component should be open for extension, but closed for modification</p>
+                </section>
+
+                <section>
+                    <h2>Useful links</h2>
+
+                    <ul>
+                        <li><a href="">Functional MessageBlock</a></li>
+                        <li><a href="">Class-based MessageBlock</a></li>
+                        <li><a href=""></a>Functional Counter</li>
+                        <li><a href=""></a>Class-based Counter</li>
+                    </ul>
+
+                </section>
             </section>
         </div>
     </div>
