Updated first slides ofr all presentations

--- a/presentations/0/index.html
+++ b/presentations/0/index.html
@@ -16,16 +16,18 @@
     <div class="reveal">
         <div class="slides">
             <section>
-                <h2>
-                    <u>React For Beginners by Itera</u>
-                </h2>
+                <h1>
+                    L0 - Introduction
+                </h1>
                 <h4>
-                    L0 - Introduction    
+                    <u>
+                        React For Beginners by Itera
+                    </u>
                 </h4>
             </section>
 
             <section>
-                <h1>About me</h1>
+                <h2>About me</h2>
                 <ul>
                     <li>Vitalii Ruban</li>
                     <li class="fragment fade-up">Head of Front-End department in <a target="_blank"
@@ -39,11 +41,36 @@
                 </ul>
             </section>
 
+            <section data-visibility="hidden">
+                <h2>Course program</h2>
+
+                <ul>
+                    <li class="fragment">
+                        0 Lecture: What is React
+                    </li>
+
+                    <li class="fragment">
+                        1 Workshop: Starting new project with create-react-app
+                    </li>
+
+                    <li class="fragment">
+                        2 Lecture: What is component and why you should use it
+                    </li>
+
+                    <li class="fragment">
+                        3 Workshop: Building your own component
+                    </li>
+
+                    <li class="fragment">TBD</li>
+
+                </ul>
+            </section>
+
             <section>
                 <section>
-                    <h1>
+                    <h2>
                         What is React?
-                    </h1>
+                    </h2>
                 </section>
 
                 <section>
@@ -106,7 +133,7 @@
 
             <section>
                 <section>
-                    <h1>React - advantages and disadvantages</h1>
+                    <h2>React - advantages and disadvantages</h2>
                 </section>
 
                 <section>
@@ -143,7 +170,7 @@
             <section>
 
                 <section>
-                    <h1>Why to learn React nowadays</h1>
+                    <h2>Why to learn React nowadays</h2>
                 </section>
 
                 <section>
@@ -198,7 +225,7 @@
             </section>
 
             <section>
-                <h1>Useful links</h1>
+                <h2>Useful links</h2>
 
                 <ul>
                     <li>
