--- a/presentations/1/index.html
+++ b/presentations/1/index.html
@@ -17,18 +17,18 @@
         <div class="slides">
             <section>
                 <h2>
-                    <u>React For Beginners by Itera</u>
+                    L1 - New project with create-react-app
                 </h2>
                 <h4>
-                    L1 - Starting new project with create-react-app
+                    <u>React For Beginners by Itera</u>
                 </h4>
             </section>
 
             <section>
                 <section>
-                    <h1>
+                    <h2>
                         Prerequisite
-                    </h1>
+                    </h2>
 
                     <ul>
                         <li>
