--- a/presentations/2/index.html
+++ b/presentations/2/index.html
@@ -16,11 +16,11 @@
     <div class="reveal">
         <div class="slides">
             <section>
-                <h2>
-                    <u>React For Beginners by Itera</u>
-                </h2>
+                <h1>
+                    L2 - Components
+                </h1>
                 <h4>
-                    L2 - What is component and why you should use it
+                    <u>React For Beginners by Itera</u>
                 </h4>
             </section>
 
