Light polishing Component workshop

--- a/presentations/3/index.html
+++ b/presentations/3/index.html
@@ -71,6 +71,12 @@
             </section>
 
             <section>
+                <h2>
+                    Building "dumb" components - functional and class-based
+                </h2>
+            </section>
+
+            <section>
                 <section>
                     <h2>Message block - class-based</h2>
                 </section>
@@ -159,6 +165,12 @@ const MessageBlock: FC&lt;MessageBlockProps&gt; = ({ message }) =&gt; (
                 <section>
                     <h4>Enjoy! 😊</h4>
                 </section>
+            </section>
+
+            <section>
+                <h2>
+                    Building "smart" component - functional and class-based
+                </h2>
             </section>
 
             <section>
@@ -335,18 +347,18 @@ return (
 
                     <p>Component should be open for extension, but closed for modification</p>
                 </section>
+            </section>
 
-                <section>
-                    <h2>Useful links</h2>
+            <section>
+                <h2>Useful links</h2>
 
-                    <ul>
-                        <li><a href="">Functional MessageBlock</a></li>
-                        <li><a href="">Class-based MessageBlock</a></li>
-                        <li><a href=""></a>Functional Counter</li>
-                        <li><a href=""></a>Class-based Counter</li>
-                    </ul>
+                <ul>
+                    <li><a href="">Functional MessageBlock</a></li>
+                    <li><a href="">Class-based MessageBlock</a></li>
+                    <li><a href="">Functional Counter</a></li>
+                    <li><a href="">Class-based Counter</a></li>
+                </ul>
 
-                </section>
             </section>
         </div>
     </div>
