--- a/presentations/3/index.html
+++ b/presentations/3/index.html
@@ -353,10 +353,10 @@ return (
                 <h2>Useful links</h2>
 
                 <ul>
-                    <li><a href="">Functional MessageBlock</a></li>
-                    <li><a href="">Class-based MessageBlock</a></li>
-                    <li><a href="">Functional Counter</a></li>
-                    <li><a href="">Class-based Counter</a></li>
+                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-class.tsx">Class-based MessageBlock</a></li>
+                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-functional.tsx">Functional MessageBlock</a></li>
+                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-functional.tsx">Functional Counter</a></li>
+                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-cb.tsx">Class-based Counter</a></li>
                 </ul>
 
             </section>
