Fixed className in the code example

--- a/presentations/0/index.html
+++ b/presentations/0/index.html
@@ -100,7 +100,7 @@
                     <pre>
                         <code>
  const data = {name: 'Vitalii'};
- const App = ({name}) => <h2 className="green">Hello - {name}</h2>
+ const App = ({name}) => &lt;h2 className="green"&gt;Hello - {name}&lt;/h2&gt;
                         </code>
                     </pre>
 
