Remove redundant js

--- a/presentations/0/index.html
+++ b/presentations/0/index.html
@@ -286,7 +286,7 @@
             </section>
         </div>
     </div>
-    <script src="./index.js" type="module"></script>
+    <script src="../shared/init.js" type="module"></script>
 </body>
 
 </html>
