--- a/presentations/1/index.html
+++ b/presentations/1/index.html
@@ -254,8 +254,8 @@ export default App;
                 <section>
                     <p class="left">
                         Feel free to alter the code inside the <i>div</i>. You can add any other HTML tag you know or
-                        text. However, tags are not HTML - it's <a
-                            href="https://reactjs.org/docs/introducing-jsx.html" target="_blank">TSX</a>
+                        text. However, tags are not HTML - it's <a href="https://reactjs.org/docs/introducing-jsx.html"
+                            target="_blank">TSX</a>
                     </p>
 
                     <p class="left">
@@ -305,7 +305,7 @@ export default App;
             </section>
         </div>
     </div>
-    <script src="./index.js" type="module"></script>
+    <script src="../shared/init.js" type="module"></script>
 </body>
 
 </html>
