--- a/presentations/3/index.html
+++ b/presentations/3/index.html
@@ -353,16 +353,24 @@ return (
                 <h2>Useful links</h2>
 
                 <ul>
-                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-class.tsx">Class-based MessageBlock</a></li>
-                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-functional.tsx">Functional MessageBlock</a></li>
-                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-functional.tsx">Functional Counter</a></li>
-                    <li><a href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-cb.tsx">Class-based Counter</a></li>
+                    <li><a
+                            href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-class.tsx">Class-based
+                            MessageBlock</a></li>
+                    <li><a
+                            href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-functional.tsx">Functional
+                            MessageBlock</a></li>
+                    <li><a
+                            href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-functional.tsx">Functional
+                            Counter</a></li>
+                    <li><a
+                            href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-cb.tsx">Class-based
+                            Counter</a></li>
                 </ul>
 
             </section>
         </div>
     </div>
-    <script src="./index.js" type="module"></script>
+    <script src="../shared/init.js" type="module"></script>
 </body>
 
 </html>
