--- a/presentations/2/index.html
+++ b/presentations/2/index.html
@@ -336,7 +336,7 @@ export default () => &lt;Btn onClick={(v) => alert(v)} /&gt;;
             </section>
         </div>
     </div>
-    <script src="./index.js" type="module"></script>
+    <script src="../shared/init.js" type="module"></script>
 </body>
 
 </html>
