Switched to include schema to divide layout and main text

--- a/presentations/4/index.html
+++ b/presentations/4/index.html
@@ -31,28 +31,7 @@
                 </h4>
             </section>
 
-
-            <section>
-                <section>
-                    <h2>What is change detection</h2>
-                </section>
-            </section>
-            <section>
-                <section>
-                    <h2>Two ways to track changes</h2>
-                </section>
-            </section>
-            <section>
-                <section>
-                    <h2>How it works in React (simplified)</h2>
-                </section>
-            </section>
-            <section>
-                <section>
-                    <h2>Typical mistakes</h2>
-                </section>
-            </section>
-
+            <include src="./4/body.html"></include>
         </div>
     </div>
     <script src="../shared/init.js" type="module"></script>
