Updated program Updated 5th presentation Improved scaffolding

--- a/presentations/4/index.html
+++ b/presentations/4/index.html
@@ -32,6 +32,15 @@
             </section>
 
             <include src="./4/body.html"></include>
+
+
+            <section>
+                <h2>Useful links</h2>
+                <ul>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/hooks-state.html">Using the State Hook</a> </li>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://morioh.com/p/caccd1b76c5c">Angular vs React - Change detection</a> </li>
+                </ul>
+            </section>
         </div>
     </div>
     <script src="../shared/init.js" type="module"></script>
